welcome.lessons.welcome.bat.bool2.In1To10.scala.error
in1To10:2: error: reassignment to val
	if (outsideMode=false && n>=1 && n<=10) {
                       ^in1To10:5: error: reassignment to val
	if (outsideMode=true && n<1 || outsideMode=true && n>10) {
                       ^